Change path for images

--- a/var/ftp/pub/centos6-i386-mvts.cfg
+++ b/var/ftp/pub/centos6-i386-mvts.cfg
@@ -6,7 +6,7 @@ firewall --disabled
 # Install OS instead of upgrade
 install
 # Use FTP installation media
-url --url="ftp://192.168.1.91/pub/"
+url --url="ftp://192.168.1.91/pub/centos/6/i386/"
 # Root password
 rootpw Pxe@123#
 # System authorization information
