--- a/var/ftp/pub/centos6-i386.cfg
+++ b/var/ftp/pub/centos6-i386.cfg
@@ -6,9 +6,9 @@ firewall --disabled
 # Install OS instead of upgrade
 install
 # Use FTP installation media
-url --url="ftp://192.168.1.91/pub/"
+url --url="ftp://192.168.1.91/pub/centos/6/i386/"
 # Root password
-rootpw --iscrypted $1$xxx
+rootpw Pxe@123#
 # System authorization information
 auth useshadow passalgo=sha512
 # Use graphical install
@@ -49,27 +49,6 @@ yum -y install epel-release
 yum -y upgrade 
 yum -y groupinstall "Development tools"
 yum -y install net-snmp mc wget openvpn telnet lftp ftp vim 
-
-cat /dev/zero | ssh-keygen -q -N "" > /dev/null
-wget -O /root/.ssh/authorized_keys $FTP/authorized_keys
-chmod 600 /root/.ssh/authorized_keys
-
- 
-wget -O /etc/sysconfig/network-scripts/ifcfg-eth0 $FTP/ifcfg-eth0
-wget -O /etc/sysconfig/network-scripts/ifcfg-eth0:0 $FTP/ifcfg-eth0:0
-wget -O /etc/sysconfig/network-scripts/ifcfg-eth1 $FTP/ifcfg-eth1
-wget -O /etc/sysconfig/network $FTP/network
-wget -O /etc/sysconfig/iptables $FTP/iptables
-
-cd /etc/openvpn && rm -f * && wget $FTP/openvpn/*
-chkconfig --level 3 openvpn on
-chmod 600 /etc/openvpn/*.key
-
-wget -O /etc/snmp/snmpd.conf $FTP/snmpd.conf
-wget -O /etc/sysconfig/snmpd $FTP/snmpd
- 
-wget -O /mvts.tar.gz $FTP/mvts.tar.gz
-cd / && tar zxvf mvts.tar.gz
 
 EOF
 
