--- a/var/ftp/pub/centos6-i386.cfg
+++ b/var/ftp/pub/centos6-i386.cfg
@@ -8,7 +8,7 @@ install
 # Use FTP installation media
 url --url="ftp://192.168.1.91/pub/centos/6/i386/"
 # Root password
-rootpw Pxe@123#
+rootpw Pxe123
 # System authorization information
 auth useshadow passalgo=sha512
 # Use graphical install
@@ -35,7 +35,7 @@ clearpart --all --initlabel
 reboot 
 part /boot --fstype=ext4 --size=512
 part swap --size=1024
-part / --fstype=ext4 --size=40768 --grow
+part / --fstype=ext4 --size=10000 --grow
 
 %packages --nobase
 
