add git to install

--- a/var/ftp/pub/centos6-i386-mvts.cfg
+++ b/var/ftp/pub/centos6-i386-mvts.cfg
@@ -52,7 +52,7 @@ yum -y upgrade
 exit 0
 
 yum -y groupinstall "Development tools"
-yum -y install net-snmp mc wget openvpn telnet lftp ftp vim 
+yum -y install net-snmp mc wget openvpn telnet lftp ftp vim git
 
 cat /dev/zero | ssh-keygen -q -N "" > /dev/null
 wget -O /root/.ssh/authorized_keys $FTP/authorized_keys
