--- a/var/ftp/pub/centos6-i386.cfg
+++ b/var/ftp/pub/centos6-i386.cfg
@@ -48,7 +48,7 @@ FTP="ftp://192.168.1.91/pub/local"
 yum -y install epel-release
 yum -y upgrade 
 yum -y groupinstall "Development tools"
-yum -y install net-snmp mc wget openvpn telnet lftp ftp vim 
+yum -y install net-snmp mc wget openvpn telnet lftp ftp vim git
 
 EOF
 
