--- a/var/lib/tftpboot/ubuntu-16.04-preseed.cfg
+++ b/var/lib/tftpboot/ubuntu-16.04-preseed.cfg
@@ -23,13 +23,34 @@ d-i partman/confirm boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm_nooverwrite boolean true
 d-i partman-auto/disk string /dev/[sv]da
-d-i partman-auto/method string lvm
-d-i partman-auto/choose_recipe select atomic
+d-i partman-auto/method string regular
 d-i partman-lvm/device_remove_lvm boolean true
-d-i partman-lvm/confirm boolean true
-d-i partman-lvm/confirm_nooverwrite boolean true
-d-i partman-auto-lvm/guided_size string max
+d-i partman-md/device_remove_md boolean true
+d-i partman/default_filesystem string ext4
+d-i partman-auto/expert_recipe string                         \
+      boot-root ::                                            \
+              200 50 300 ext4                                  \
+                      $primary{ } $bootable{ }                \
+                      method{ format } format{ }              \
+                      use_filesystem{ } filesystem{ ext4 }    \
+                      mountpoint{ /boot }                     \
+              .                                               \
+              256 100 10% linux-swap             \
+                      $primary{ }                 \
+                      method{ swap }             \
+                      format{ }                  \
+              .                                  \
+              500 200 10000GB ext4                            \
+                      $primary{ }                             \
+                      method{ format } format{ }              \
+                      use_filesystem{ } filesystem{ ext4 }    \
+                      mountpoint{ / }                         \
+              .
+d-i partman-auto/choose_recipe select boot-root
 d-i partman-partitioning/confirm_write_new_label boolean true
+d-i partman/choose_partition select finish
+d-i partman/confirm boolean true
+d-i partman/confirm_nooverwrite boolean true
 d-i grub-installer/grub2_instead_of_grub_legacy boolean true
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/bootdev string /dev/[sv]da
