--- a/var/lib/tftpboot/ubuntu-preseed.cfg
+++ b/var/lib/tftpboot/ubuntu-preseed.cfg
@@ -56,4 +56,5 @@ d-i grub-installer/only_debian boolean true
 d-i grub-installer/bootdev string /dev/[sv]da
 d-i pkgsel/update-policy select none
 d-i pkgsel/include string openssh-server nfs-kernel-server
+d-i preseed/late_command string in-target sed -i s/prohibit-password/yes/g /etc/ssh/sshd_config; apt-install xfsprogs initramfs-tools screen ftp rsync strace vim build-essential multipath-tools lsscsi lvm2 scsitools mc curl git linux-libc-dev golang gcc bison
 d-i finish-install/reboot_in_progress note
